--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-google-auth>=2.16.0
-google-api-python-client>=2.70.0
-typing-extensions
-google~=3.0.0
-logorator~=1.0.6
-cacherator~=1.0.9
-html2docx~=1.6.0
-Markdown~=3.7
-html2text~=2024.2.26
-protobuf~=5.29.3
+google-auth>=2.0.0
+google-api-python-client>=2.0.0
+html2text>=2020.1.16
+markdown>=3.3.0
+html2docx>=1.0.0
+cacherator
+logorator
+python-slugify
+asyncio
